SBOM 944 fix export pdf for spdx metadata and cdx xml (#12519)